style.css
/* ... */
/*--------------------------------------------------------------
13.0 Popups
--------------------------------------------------------------*/
.aPop
{
	background: #FFF;
}

.aPop .close_popup
{
	background: #006a85;
	padding: 10px 25px;
	text-align: right;
}

.aPop .close_popup a
{
	font-size: 12px;
	line-height: 15px;
	color: #FFF;
	text-decoration: none;
	font-family: "GSL";
}
.aPop .wpb_row.vc_row-fluid{
	overflow: auto;
}
.aPop .popup_content
{
	position:relative;
	padding: 20px 20px 10px 40px;
	float: left;
	width: 66%;
	z-index:100;
}
.aPop .popup_img
{
	text-align: center;
	float:none;
	z-index:0;
}
.aPop .popup_img img
{
	display: block;
}
.aPop .popup_content h2
{
	font-size: 20px;
	line-height: 1.4;
	color: #006a85;
	margin: 0px 0px 15px;
	font-family: "GSL";
	font-weight: 400;
	text-transform:uppercase
}
.aPop .popup_content ul
{
	font-size: 16px;
	line-height: 23px;
	margin-bottom: 15px;
	font-family: "Helvetica Neue";
	font-weight: 300;
}
.aPop .vc_btn_grey.vc_btn_square_outlined.vc_btn_blue
{
	margin-top:12px;
	color: #006a85 !important;
	border-color: #006a85 !important;
}
.aPop .vc_btn_grey.vc_btn_square_outlined.vc_btn_blue:hover{
	background-color:#006a85 !important;
	color:#fff !important;
}

.fancybox-skin
{
	background: none !important;
	padding: 0px !important;
}

.aPop .clear
{
 	clear: both;
 	margin: 0 auto;
}

.fancybox-opened .fancybox-skin
{
	box-shadow: none !important;
}
/* Brochure pop-up specific styles */
#broPop .popup_img img{
	width:34%;
	max-width:242px;
}

@media screen and (max-width: 589px) {
	.fancybox-opened,
	.fancybox-inner{
		width:300px !important;
	}
	.aPop .popup_content
	{
		width:auto;
		float:none;
		padding-left:30px;
		text-align:center;
	}
	.aPop .popup_content h2,
	.aPop .popup_content ul,
	.aPop .popup_content p
	{
		text-align:left;
	}
	.aPop .vc_btn_grey.vc_btn_square_outlined.vc_btn_blue
	{
		text-align:center; 
	}
	.aPop .popup_img img{
		width:auto !important;
	}
	/* Brochure pop-up specific styles */
	#broPop .popup_img
	{
		position:relative;
		left:20px;
	}
}

/* Updated New Design */
.site-branding {
    float: left;
    margin-right: 40px;
}

.site-header {
    background: #FFF;
    padding: 12px 10px 18px 20px;
    position: relative;
}

.main-navigation
{
	background: url('images/newdesign/site_border_bg.jpg') 0px center no-repeat transparent; 
}

a#logo {
    background: transparent url("images/newdesign/logo_white.jpg") no-repeat scroll 0px 0px;
    display: block;
    width: 149px;
    height: 58px;
    text-indent: -999em;
}

.main-navigation li a
{
	color: #000;
	font-size: 13px;
	letter-spacing: 1px;
	font-family: "GSMT";
}

.main-navigation li.current-menu-item a,
.main-navigation li a:hover {
	color: #333;
}

.main-navigation li.where-to-buy a
{
	color: #636363;
	font-family: "GSMT";
	font-size: 13px;
	letter-spacing: 1px;
}

.main-navigation li.menu-item-search a#show-search-form
{
	color: #636363;
	font-family: "GSMT";
	font-size: 13px;
	letter-spacing: 1px;
}

.main-navigation li.menu-item-search a#show-search-form:hover
{
	color: #636363;
}


.main-navigation li ul.sub-menu a {
	color: #e1e1e1;
	display: block;
	letter-spacing: 1px;
	text-decoration: none;
	text-transform: uppercase;
}

.main-navigation li ul.sub-menu a:hover {
	color: #fff;
}
/* Brochure */
.main-navigation li.brochure-request {
	float: right;
	top: -6px;
}
.main-navigation ul.nav-menu > li.brochure-request:after {
	top: 5px;
}
.main-navigation li.brochure-request a {
	background: url(images/newdesign/brochure_icon.png) no-repeat 0 0;
	display: block;
	font-size: 12px;
	height: 24px;
	letter-spacing: 2px;
	margin-right: 6px;
	padding: 6px 0px 6px 24px;
	text-transform: capitalize;
	line-height: 8px;
}

.menu-main-menu-container
{
	margin-left: 40px;
}

.main-navigation li.where-to-buy a
{
	background: url(images/newdesign/showroom_icon.png) no-repeat 0 0;
}

.main-navigation li.menu-item-search a#show-search-form
{
	background: transparent url("images/newdesign/glass_icon.png") no-repeat scroll 0px 2px;
}

.hero_image_container
{
	background: #919191;
	max-height: 203px;
}

.home .tp-rightarrow.default
{
	height: 64px;
	width: 44px;
	background: url(images/newdesign/arrow_right.png) 0 0 no-repeat transparent;
}

.home .tp-leftarrow.default
{
	height: 64px;
	width: 44px;
	background: url(images/newdesign/arrow_left.png) 0 0 no-repeat transparent;
}

.home .tp-caption.excerpt
{
	left: 0px !important;
	bottom: -10px !important;
	height: auto !important;
	max-height: 200px !important;
	padding: 30px 40px !important;
	background: #ffffff !important;
	opacity: 0.9 !important;
	font-size: 46px !important;
	line-height: 50px !important;
	font-family: "GSL" !important;
	color: #000 !important;
	letter-spacing: 4px !important;
	width: 100% !important;
	
}

.home .tp-caption.excerpt .fullwidthcaption
{
	xmargin-top: 30px !important;
}

.home .tp-caption.BUTTON a
{
	font-size: 13px !important;
	padding: 15px 45px !important;
	border: 1px solid #919191 !important;
	text-transform: uppercase !important;
	color: #000 !important;
	text-decoration: none !important;
	font-family: "GSMT";
} 

.home .tp-caption.excerpt
{
	background: none !important;
}

.home .tp-revslider-mainul .tp-parallax-wrap:first-child
{
	left: 0px !important;
}

.home .tp-loop-wrap
{
	width: 100% !important;
}

.menu-toggle
{
	background-color: #000;
}

.site-content {
    position: relative;
    margin-top: 30px;
}


.installation-cta.cta-jacuzzi
{
	border-right: 2px solid #FFF;
}


/* Showroom Updates */

.online-retailers-block
{
	margin: 40px 0px 20px;
}

.online-retailers-block .eachOnlineRetailers
{
	width: 31.5%;
	float: left;
	margin: 0px 1.5% 20px;
	padding: 30px;
	border: 1px solid #d7d7d7;
	background: #FFF;
	max-width: 350px;
}

.online-retailers-block .eachOnlineRetailers.buildcom
{
	background: url("images/newdesign/build_logo.jpg") no-repeat 30px 16px #FFF;
}
/* ... */

